--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "comby tool",
   "main": "index.js",
+  "bin": {
+    "comby": "./bin/comby.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/femxd/comby-tool/issues"
   },
-  "homepage": "https://github.com/femxd/comby-tool#readme"
+  "homepage": "https://github.com/femxd/comby-tool#readme",
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "commander": "^2.9.0",
+    "inquirer": "^3.0.6",
+    "lodash": "^4.17.4"
+  }
 }
